// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.Form check default default props from Mixins UU5.Forms.FormMixin 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  />
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props className="my-classname" 1`] = `
<form
  className="uu5-forms-form my-classname uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props className="test-classname" 1`] = `
<form
  className="uu5-forms-form test-classname uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props controlled=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props controlled=true 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props default props 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props disabled=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props disabled=false 3`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props disabled=true 1`] = `
<form
  className="uu5-forms-form uu5-common-disabled uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props disabled=true 3`] = `
<form
  className="uu5-forms-form uu5-common-disabled uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <Footer
      content={
        <div>
          Footer of section
        </div>
      }
      id="uuID-footer"
      key="2"
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props fullTextSearchPriority=0 1`] = `
<form
  className="uu5-forms-form uu-fulltextsearch-0 uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props fullTextSearchPriority=0 2`] = `
<form
  className="uu5-forms-form uu-fulltextsearch-0 uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Header
      content={
        <div>
          Header of section
        </div>
      }
      id="uuID-header"
      key="0"
      underline={false}
    />
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props hidden=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props hidden=false 3`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props hidden=true 1`] = `
<form
  className="uu5-forms-form uu5-common-hidden uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props hidden=true 3`] = `
<form
  className="uu5-forms-form uu5-common-hidden uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props id="myId" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="myId"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props id="test-id" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="test-id"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props mainAttrs=undefined 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props name="myName" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  name="myName"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props nestingLevel="box" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props nestingLevel="inline" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props noPrint=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props noPrint=true 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props progressIndicator="Libovolný vstup pro progressIndicator." 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props pureRender=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props pureRender=true 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props saveOnEnter=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props saveOnEnter=true 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props selected=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props selected=true 1`] = `
<form
  className="uu5-forms-form uu5-common-selected uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props style="padding:8px; borderRadius: 2px" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props style={"backgroundColor":"red","color":"blue"} 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props style={"margin":8} 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props tooltip="My Tooltip" 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props underline=false 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props underline=true 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": null,
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.Form props values={"input0":"Jan"} 1`] = `
<form
  className="uu5-forms-form uu5-common-form uu-forms-ifp1tt"
  id="uuID"
  onSubmit={[Function]}
  style={Object {}}
  title={null}
>
  <AlertBus
    closeTimer={null}
    location="local"
    ref_={[Function]}
  />
  <ContextProvider
    value={
      Object {
        "inputColWidth": undefined,
        "labelAlignment": undefined,
        "labelColWidth": undefined,
        "readOnly": false,
        "values": Object {
          "input0": "Jan",
        },
      }
    }
  >
    <Text
      id="uuID-child"
      key="1-0"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
  </ContextProvider>
  <button
    style={
      Object {
        "display": "none",
      }
    }
    type="submit"
  />
</form>
`;

exports[`UU5.Forms.FormMixin props.function testing onCancel() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onCancel() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onInit() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onInit() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onReset() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onReset() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSave() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSave() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSaveByKey() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSaveByKey() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSaveDone() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSaveDone() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSaveFail() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onSaveFail() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onValidate() 1`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;

exports[`UU5.Forms.FormMixin props.function testing onValidate() 2`] = `
<Container>
  <Form
    footer={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-xs"
        colorSchema="grey"
        content="Unicorn 2018"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    header={
      <Box
        bgStyle="filled"
        borderRadius={null}
        className="font-size-m"
        colorSchema="green"
        content="Registration form"
        controlled={true}
        disableClick={false}
        disabled={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        id="uuID04"
        ignoreInnerHTML={false}
        infoContent={null}
        infoHeader="Info"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
    }
    id="uuID06"
    onCancel={[Function]}
    onInit={[Function]}
    onReset={[Function]}
    onSave={[Function]}
    onSaveByKey={[Function]}
    onSaveDone={[Function]}
    onSaveFail={[Function]}
    onValidate={[Function]}
  >
    <Text
      id="uuID03"
      label="Name"
      name="name"
      placeholder="John"
      required={true}
    />
    <TextArea
      id="uuID02"
      label="Description"
      name="description"
      placeholder="Some text..."
    />
    <Controls
      id="uuID01"
    />
  </Form>
</Container>
`;
